<resources>
    <string name="app_name">TT</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="facebook_app_id">945428712262139</string>
    <string name="fb_login_protocol_scheme">fb945428712262139</string>
    <string name="logTitle">활동 기록</string>
    <string name="logJoinUs">가입한지</string>
    <string name="logContribution">기여도</string>
    <string name="logComment">남긴 댓글</string>
    <string name="logLike">받은 좋아요</string>
    <string name="todayComment">하루 남긴 댓글</string>
    <string name="todayLike">하루 받은 좋아요</string>
    <string name="comment_comment">댓글</string>
    <string name="login_welcome">돌아오신 것을 환영합니다!</string>
    <string name="login_info">계속하려면 로그인하세요.</string>
    <string name="login_id">아이디</string>
    <string name="login_idEdit">아이디를 입력하세요.</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_pwEdit">비밀번호를 입력하세요.</string>
    <string name="login_pwforgot">비밀번호를 잊으셨나요?</string>
    <string name="login_btn">로그인</string>
    <string name="login_facebook">페북 로그인</string>
    <string name="login_join">계정이 없으신가요? 회원가입하기</string>
    <string name="main_title">트럼프 투데이</string>
    <string name="alim_title">최근 알림</string>
    <string name="content_detailed_view">상세 보기</string>
    <string name="content_like">좋아요</string>
    <string name="content_addContent">댓글</string>
    <string name="signup_first">환영합니다!</string>
    <string name="signup_name">이름</string>
    <string name="signup_nameEdit">이름을 입력하세요</string>
    <string name="signup_btn">회원가입</string>
    <string name="main_trump_issue">트럼프 핫이슈</string>
    <string name="main_trump_issue_content">가장 핫한 트럼프 정보입니다.</string>
    <string name="main_today_trump">오늘의 트럼프</string>
    <string name="main_trump_today_info">오늘의 핫한 트럼프 정보입니다.</string>
    <string name="news">뉴스</string>
    <string name="menu_1">최근 알림</string>
    <string name="menu_2">활동 기록</string>
    <string name="menu_3">비밀번호 변경</string>
    <string name="menu_4">로그아웃</string>
    <string name="menu_5">회원탈퇴</string>
</resources>
