<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/alimBtn"
            android:icon="@drawable/ic_recent_alerts"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/logBtn"
            android:icon="@drawable/ic_record"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/pwChange"
            android:icon="@drawable/ic_change_password"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/signDelete"
            android:icon="@drawable/ic_withdrawal"
            android:title="@string/menu_5" />
    </group>

</menu>